# poker-app

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 5ce4245b4f0f_add_name_needs_correction_to_users.py  b18da9959263_create_users_table.py
app/: main.py
app/api/http/: registration.py  telegram_webhook.py  users.py  vk_webhook.py
app/application/: exceptions.py
app/application/use_cases/: approve_user.py  correct_user.py  link_pending_user.py  list_pending_registrations.py  make_admin.py  register_user.py  reject_user.py  request_registration.py
app/bot/shared/: buttons.py  registration_hints.py  texts.py  texts_admin.py  texts_user.py
app/bot/telegram/: handlers.py  keyboards.py  notifications.py  runtime.py  states.py
app/bot/vk/: api.py  keyboards.py  notifications.py  state.py
app/config/: settings.py
app/db/: __init__.py  dependencies.py  session.py
app/db/models/: user.py
app/db/repositories/: user_repository.py
app/schemas/: registration.py  user.py
